# movieweb

./: README.md
python-microservices/: .env  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  movie.env  user.env  users.env  webapp.env
python-microservices/movie_service/: movies.dockerfile
python-microservices/public-api/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  api-movie.json  package.json
python-microservices/scripts/: restart-user.sh  restart_all_REMOVES_DB.sh
python-microservices/user-service/app/: prestart.sh  pyproject.toml
python-microservices/user-service/app/app/: main.py
python-microservices/user-service/app/app/api/: deps.py
python-microservices/user-service/app/app/api/api/: api.py
python-microservices/user-service/app/app/api/api/endpoints/: login.py  users.py
python-microservices/user-service/app/app/core/: config.py  security.py
python-microservices/user-service/app/app/crud/: crud_user.py
python-microservices/user-service/app/app/db/: init_db.py
python-microservices/user-service/app/app/db/initial_data/: users.py
python-microservices/user-service/app/app/db/models/: user.py
python-microservices/user-service/app/app/schemas/: user.py
python-microservices/users/: Dockerfile
scripts/: .gitignore  find-todos.sh  map-ips-to-hostnames.sh  regenerate-dev-keys.sh  restart-all.sh  restart-prod.sh  start-dev-redis-cli.sh
services/: .env  docker-compose.override.yml  docker-compose.yml  movies.env  relationships-db1.env  relationships-db2.env  relationships.env  reviews.env  users.env
(+200 files in other folders)
