[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Krzysztof Antoniak", "Mateusz Biesiadowski"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
uvicorn = "^0.13.1"
pydantic = {extras = ["email"], version = "^1.7.3"}
gunicorn = "^20.0.4"
SQLAlchemy = "^1.3.20"
psycopg2-binary = "^2.8.6"
alembic = "^1.4.3"
tenacity = "^6.3.1"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
python-jose = "^3.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest-cov = "^2.10.1"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
